Add feature for changing stylesheet of articles

--- a/styles/1500.css
+++ b/styles/1500.css
@@ -15,13 +15,13 @@ html {
   color: #444;
 }
 
-img {
+.articleContainer img {
   width: 40vw;
   -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
 
-figure {
+.articleContainer figure {
   margin: 1.6em 0;
   display: flex;
   flex-direction: column;
@@ -29,41 +29,43 @@ figure {
   align-items: center;
 }
 
-figcaption {
+.articleContainer figcaption {
   font-size: 0.625em;
 }
 
-h1,
+.articleContainer h1,
 h2 {
   text-transform: capitalize;
   font-weight: 500;
   text-align: center;
   line-height: 1.6em;
+  color: #444;
 }
 
-h1 {
+.articleContainer h1 {
   font-size: 3em;
 }
 
-h2 {
+.articleContainer h2 {
   font-size: 2em;
   margin-top: 50px;
   text-transform: capitalize;
 }
 
-p {
+.articleContainer p {
   text-align: justify;
   text-align-last: justify;
   font-style: italic;
   font-weight: 600;
+  color: #444;
 }
 
-.info > p {
+.articleContainer .info > p {
   text-align: center;
   text-align-last: center;
 }
 
-q {
+.articleContainer q {
   font-style: italic;
   margin: 150px;
   font-size: 1.6em;
