--- a/styles.css
+++ b/styles.css
@@ -400,3 +400,23 @@ a:active {
   flex-direction: row;
   justify-content: center;
 }
+
+/* Main content articles */
+
+#main-content {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+#metadataviewer {
+  height: 100vh;
+  width: 20vw;
+  background-color: white;
+  overflow-y: scroll;
+}
+
+#currentArticle {
+  height: 100vh;
+  overflow-y: scroll;
+}
