--- a/styles.css
+++ b/styles.css
@@ -416,6 +416,36 @@ a:active {
   overflow-y: scroll;
 }
 
+.collapsible {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.active,
+.collapsible:hover {
+  background-color: #555;
+}
+
+.content {
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  color: black;
+}
+
+.content p {
+  color: black;
+  padding: 10px 10px 10px 30px;
+  cursor: pointer;
+}
+
 #currentArticle {
   height: 100vh;
   overflow-y: scroll;
