--- a/styles.css
+++ b/styles.css
@@ -416,16 +416,27 @@ a:active {
   overflow-y: scroll;
 }
 
+#info-box {
+  margin: 1em;
+  padding: 1em;
+  background-color: #f1f1f1;
+}
+
+#info-box p {
+  color: black;
+  line-height: 2em;
+}
+
 .collapsible {
-  background-color: #777;
+  background-color: black;
   color: white;
   cursor: pointer;
-  padding: 18px;
+  padding: 1.5em;
   width: 100%;
   border: none;
   text-align: left;
   outline: none;
-  font-size: 15px;
+  font-size: 18px;
 }
 
 .active,
