--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,25 @@ h1 {
   color: #f7f7f7;
   line-height: 110%;
 }
+h2 {
+  font-family: Helvetica-Neue, Helvetica, sans-serif;
+  font-size: 48px;
+  font-weight: 400;
+  text-transform: uppercase;
+
+}
 h3 {
   font-family: Helvetica-Neue, Helvetica, sans-serif;
   font-size: 30px;
   font-weight: 300;
   text-transform: uppercase;
+  margin-top: 1.5rem;
 }
 p {
   font-family: Helvetica-Neue, Helvetica, sans-serif;
   font-size: 16px;
   color: #f7f7f7;
+  margin-top: 10px;
 }
 li,
 a,
