small fix in art cover

--- a/styles/2030.css
+++ b/styles/2030.css
@@ -241,6 +241,7 @@ blockquote {
     font-family:'UnifrakturMaguntia', cursive;
     transition: .2s ease-in;
     text-transform: capitalize;
+    cursor: pointer;
  }
  .cover {
     padding: 0;
