Add cover style for 2000

--- a/css/documentation.css
+++ b/css/documentation.css
@@ -12,3 +12,17 @@
 .image-display figure  img{
     width: 100%;
 }
+
+.color-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.color-container > div {
+    margin-right: 10px;
+}
+
+.color-box {
+    width: 50px;
+    height: 50px;
+}
