--- a/styles/1500.css
+++ b/styles/1500.css
@@ -40,6 +40,7 @@ h2 {
   text-align: center;
   line-height: 1.6em;
   color: #444;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .articleContainer h1 {
@@ -58,32 +59,38 @@ h2 {
   font-style: italic;
   font-weight: 600;
   color: #444;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .articleContainer .info > p {
   text-align: center;
   text-align-last: center;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .articleContainer q, blockquote {
   font-style: italic;
   margin: 150px;
   font-size: 1.6em;
+  font-family: "Times New Roman", Times, serif;
 }
 
 /* Cover */;
 
 .issue-name{
   font-size: 1.5em;
-  color: black
+  color: black;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .link-to-page {
   margin-top: 50px;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .cover-link{
-  color: #444
+  color: #444;
+  font-family: "Times New Roman", Times, serif;
 }
 
 .cover-link{
